--- a/html/index.html
+++ b/html/index.html
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/carousel2.png" class="responsive " alt="...">
+                        <img src="../img/carousel2.jpg" class="responsive " alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Second slide label</h5>
                             <p>Some representative placeholder content for the second slide.</p>
@@ -138,7 +138,7 @@
             <div class="sectionTwoRule" id="borderSectionTwo"></div>
         </div>
         <div class="textSectionTwo">
-            <p>Con <em class="travelnowWord">Guanacaste activa</em> usa tu tiempo <br> viviendo la experiencia <br> y no organizándola.</p>
+            <p class="text-justify">Con <em class="travelnowWord">Guanacaste activa</em> usa tu tiempo <br> viviendo la experiencia <br> y no organizándola.</p>
         </div>
     </section>
 
