--- a/html/index.html
+++ b/html/index.html
@@ -26,8 +26,8 @@
     <!--============== fonts ==================-->
 
     <!--============== SEO ==================-->
-    <meta name="keywords" content="aerolínea argentina, agencia de viaje, viaje, vuelos, viajar, hoteleria, turismo, pasajes">
-    <meta name="description" content="Con TravelNow viaja ya y olvidate de los problemas, nosotros lo organizamos. Nuestro servicio de paquetes organiza todo tu viaje y se ajusta a todos los presupuestos">
+    <meta name="keywords" content="Emprededurismo,Guanacaste">
+    <meta name="description" content="Con Guanacaste Activa">
     <title>Guanacaste Activa</title>
     <link rel="icon" href="../img/genericas/plane_solid.png">
 </head>
