--- a/404.html
+++ b/404.html
@@ -25,9 +25,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
 
     <!--============== SEO ==================-->
-    <meta name="keywords" content="aerolínea argentina, agencia de viaje, viaje, vuelos, viajar, hoteleria, turismo, pasajes">
-    <meta name="description" content="Con TravelNow viaja ya y olvidate de los problemas, nosotros lo organizamos. Nuestro servicio de paquetes organiza todo tu viaje y se ajusta a todos los presupuestos">
-    <title>TravelNow</title>
+    <meta name="keywords" content="aerolínea ">
+    <meta name="description" content="Conupuestos">
+    <title>G-activa
+    </title>
     <link rel="icon" href="../img/genericas/plane_solid.png">
 </head>
 
