--- a/index.html
+++ b/index.html
@@ -338,13 +338,13 @@
                 <div class="row d-flex justify-content-between ">
                     <div class="contenedor container-fluid">
                         <div class="redes-sociales2" id="contacto">
-                            <a href="https://cr.linkedin.com/" target="_blank" class="social linkedin" title="Linkedin"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://cr.linkedin.com/" target="_blank" class="social linkedin" title="Linkedin"><i class=""></i></a>
                             <a href="https://www.facebook.com" target="_blank" class="social facebook" title="Facebook"><i
-                        class="fab fa-facebook"></i></a>
+                        class="bx bxl-facebook"></i></a>
                             <a href="https://api.whatsapp.com/send?phone=+5068&amp;text=Estoy interesado en tomar tu solicitud de informacion sobre consultorias de" target="_blank" class="social whatsapp" title="whatsapp">
                                 <i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                             <a href="https://www.twitter.com " target="_blank " class="social twitter " title="Twitter "><i
-                                    class="fab fa-twitter "></i></a>
+                                    class="bx bxl-twitter"></i></a>
                         </div>
                     </div>
                 </div>
