--- a/services.html
+++ b/services.html
@@ -20,24 +20,24 @@
     <link rel="apple-touch-icon" href="#" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.2.0/tailwind.min.css">
     <script src="https://kit.fontawesome.com/b3d59c92a1.js" crossorigin="anonymous"></script>
     <!-- Pogo Slider CSS -->
-    <link rel="stylesheet" href="../css/pogo-slider.min.css" />
-    <link rel="stylesheet" href="../css/magnific-popup.css" />
-    <link rel="stylesheet" href="../css/font-awesome.min.css" />
-    <link rel="stylesheet" href="../css/responsiveslides.css" />
-    <link rel="stylesheet" href="../css/services.css" />
-    <link rel="stylesheet" href="../css/animate.css" />
+    <link rel="stylesheet" href="css/pogo-slider.min.css" />
+    <link rel="stylesheet" href="css/magnific-popup.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/responsiveslides.css" />
+    <link rel="stylesheet" href="css/services.css" />
+    <link rel="stylesheet" href="css/animate.css" />
 
     <!-- Site CSS -->
-    <link rel="stylesheet" href="../css/flaticon.css" />
-    <link rel="stylesheet" href="../css/timeline.css" />
+    <link rel="stylesheet" href="css/flaticon.css" />
+    <link rel="stylesheet" href="css/timeline.css" />
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="../css/responsive.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
     <!-- Custom CSS -->
 
     <!--[if lt IE 9]>
@@ -95,7 +95,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="service_blog" style=" background-color:#f5f0f0;">
                         <div class="service_icons">
-                            <img width="75" height="75" src="../img/icon-1.png" alt="#">
+                            <img width="75" height="75" src="img/icon-1.png" alt="#">
                         </div>
                         <div class="full">
                             <h4>Entrenamiento y Capacitacion</h4>
@@ -127,7 +127,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="service_blog" style=" background-color:#f5f0f0;">
                         <div class="service_icons">
-                            <img width="75" height="75" src="../img/icon-2.png" alt="#">
+                            <img width="75" height="75" src="img/icon-2.png" alt="#">
                         </div>
                         <div class="full">
                             <h4>Consultoria en Salud Ocupacional</h4>
@@ -154,7 +154,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="service_blog" style=" background-color:#f5f0f0;">
                         <div class="service_icons">
-                            <img width="75" height="75" src="../img/icon-3.png" alt="#">
+                            <img width="75" height="75" src="img/icon-3.png" alt="#">
                         </div>
                         <div class="full">
                             <h4>Monitoreo de Agentes Ocupacionales</h4>
@@ -185,7 +185,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="service_blog" style=" background-color:#f5f0f0;">
                         <div class="service_icons">
-                            <img width="75" height="75" src="../img/icon-4.png" alt="#">
+                            <img width="75" height="75" src="img/icon-4.png" alt="#">
                         </div>
                         <div class="full">
                             <h4>Elaboracion de Planes de Emergencia y salud ocupacional</h4>
@@ -199,7 +199,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="service_blog" style=" background-color:#f5f0f0;">
                         <div class="service_icons">
-                            <img width="75" height="75" src="../img/icon-5.png" alt="#">
+                            <img width="75" height="75" src="img/icon-5.png" alt="#">
                         </div>
                         <div class="full">
                             <h4>Certificacion covid-19</h4>
@@ -213,7 +213,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="service_blog" style=" background-color:#f5f0f0;">
                         <div class="service_icons">
-                            <img width="75" height="75" src="../img/icon-6.png" alt="#">
+                            <img width="75" height="75" src="img/icon-6.png" alt="#">
                         </div>
                         <div class="full">
                             <h4>APP Safety Solutions CR</h4>
@@ -319,16 +319,16 @@
                             </div>
                             <div class="carousel-item">
                                 <div class="row">
-                                    <div class="col-lg-3 col-md-6 col-sm-12">
+                                    <div class="col-lg-3 col-md-6 col-sm-12 ">
                                         <img class="img-responsive" src="images/img1.png" alt="#" />
                                     </div>
-                                    <div class="col-lg-3 col-md-6 col-sm-12">
+                                    <div class="col-lg-3 col-md-6 col-sm-12 ">
                                         <img class="img-responsive" src="images/img2.png" alt="#" />
                                     </div>
-                                    <div class="col-lg-3 col-md-6 col-sm-12">
+                                    <div class="col-lg-3 col-md-6 col-sm-12 ">
                                         <img class="img-responsive" src="images/img3.png" alt="#" />
                                     </div>
-                                    <div class="col-lg-3 col-md-6 col-sm-12">
+                                    <div class="col-lg-3 col-md-6 col-sm-12 ">
                                         <img class="img-responsive" src="images/img4.png" alt="#" />
                                     </div>
                                 </div>
@@ -488,18 +488,18 @@
             </ul>
         </div>
     </div>
-    <script src="../js/jquery.min.js "></script>
-    <script src="../js/popper.min.js "></script>
-    <script src="../js/jquery.magnific-popup.min.js "></script>
-    <script src="../js/jquery.pogo-slider.min.js "></script>
-    <script src="../js/custom.js "></script>
-    <script src="../js/bootstrap.min.js "></script>
+    <script src="js/jquery.min.js "></script>
+    <script src="js/popper.min.js "></script>
+    <script src="js/jquery.magnific-popup.min.js "></script>
+    <script src="js/jquery.pogo-slider.min.js "></script>
+    <script src="js/custom.js "></script>
+    <script src="js/bootstrap.min.js "></script>
     <script src="https://kit.fontawesome.com/b3d59c92a1.js " crossorigin="anonymous "></script>
     <!-- ALL PLUGINS -->
-    <script src="../js/images-loded.min.js "></script>
-    <script src="../js/slider-index.js "></script>
-    <script src="../js/smoothscroll.js "></script>
-    <script src="../js/isotope.min.js "></script>
+    <script src="js/images-loded.min.js "></script>
+    <script src="js/slider-index.js "></script>
+    <script src="js/smoothscroll.js "></script>
+    <script src="js/isotope.min.js "></script>
     <script>
         /* counter js */
 
