changes on index

--- a/ofertas.html
+++ b/ofertas.html
@@ -15,13 +15,13 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <!--========== swiperCss ==========-->
-    <link rel="stylesheet" href="../css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
 
     <!--============== normalizeCss ==================-->
-    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
 
     <!--============== css ==================-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!--============== fonts ==================-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -30,8 +30,8 @@
     <!--============== SEO ==================-->
     <meta name="keywords" content="aerolínea argentina, agencia de viaje, vuelos, viajar, pasajes, Paris, Barcelona, Santorini, viajar a españa, viajar a francia, viajar a grecia">
     <meta name="description" content="Mira las ofertas que tenemos para vos en TravelNow, viaja hoy no pienses mas.">
-    <title>TravelNow - Ofertas</title>
-    <link rel="icon" href="../img/genericas/plane_solid.png">
+    <title>Guanacaste Activa Blog</title>
+    <link rel="icon" href="img/genericas/plane_solid.png">
 </head>
 
 <body>
@@ -76,11 +76,11 @@
 
     <!--============== ofertas ==================-->
     <main class="ofertas" id="top">
-        <img src="../img/genericas/generic_4.jpg" class="ofertasBg" alt="Hombre en cima de montaña">
+        <img src="img/genericas/generic_4.jpg" class="ofertasBg" alt="Hombre en cima de montaña">
         <div class="ofertasBlur"></div>
         <div class="cardContainer">
             <div class="card">
-                <img src="../img/destinos/paris/paris_1.jpg" alt="Calle de París">
+                <img src="img/destinos/paris/paris_1.jpg" alt="Calle de París">
                 <div class="cardOverlay">
                     <div class="cardData">
                         <h1 class="cardTitle"><a href="#destino__0">París</a></h1>
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../img/destinos/barcelona/barcelona_1.jpg" alt="Calle de Barcelona">
+                <img src="img/destinos/barcelona/barcelona_1.jpg" alt="Calle de Barcelona">
                 <div class="cardOverlay">
                     <div class="cardData">
                         <h2 class="cardTitle"><a href="#destino__1">Barcelona</a></h2>
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="../img/destinos/santorini/santorini_1.jpg" alt="Costa de Santorini">
+                <img src="img/destinos/santorini/santorini_1.jpg" alt="Costa de Santorini">
                 <div class="cardOverlay">
                     <div class="cardData">
                         <h2 class="cardTitle"><a href="#destino__2">Santorini</a></h2>
@@ -124,11 +124,11 @@
         <div class="popupClose" id="popupClose"><i class='bx bx-x'></i></div>
         <div class="swiper-container swiperPopUp">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="../img/destinos/paris/paris_3.jpg" alt="Torre eiffel"></div>
-                <div class="swiper-slide"><img src="../img/destinos/paris/paris_2.jpg" alt="Gárgolas clásicas en París"></div>
-                <div class="swiper-slide"><img src="../img/destinos/paris/paris_6.jpg" alt="Peatonal en París"></div>
-                <div class="swiper-slide"><img src="../img/destinos/paris/paris_4.jpg" alt="Pila de cruasanes"></div>
-                <div class="swiper-slide"><img src="../img/destinos/paris/paris_5.jpg" alt="Pirámide del museo"></div>
+                <div class="swiper-slide"><img src="img/destinos/paris/paris_3.jpg" alt="Torre eiffel"></div>
+                <div class="swiper-slide"><img src="img/destinos/paris/paris_2.jpg" alt="Gárgolas clásicas en París"></div>
+                <div class="swiper-slide"><img src="img/destinos/paris/paris_6.jpg" alt="Peatonal en París"></div>
+                <div class="swiper-slide"><img src="img/destinos/paris/paris_4.jpg" alt="Pila de cruasanes"></div>
+                <div class="swiper-slide"><img src="img/destinos/paris/paris_5.jpg" alt="Pirámide del museo"></div>
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
@@ -148,13 +148,13 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgCero">
-                    <img src="../img/destinos/paris/paris_3.jpg" alt="Torre eiffel">
+                    <img src="img/destinos/paris/paris_3.jpg" alt="Torre eiffel">
                 </div>
             </div>
             <div class="subDestinos__seccion__capsula reverse">
 
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgCero">
-                    <img src="../img/destinos/paris/paris_2.jpg" alt="Gárgolas clásicas en París">
+                    <img src="img/destinos/paris/paris_2.jpg" alt="Gárgolas clásicas en París">
                 </div>
                 <div class="subDestinos__seccion__capsula__data">
                     <p class="letterSpacing">capsula <em>2</em></p>
@@ -165,7 +165,7 @@
             </div>
         </div>
         <div class="subDestinos__img">
-            <img id="subDestinos__imgCero" src="../img/destinos/paris/paris_1.jpg" alt="Calle de París">
+            <img id="subDestinos__imgCero" src="img/destinos/paris/paris_1.jpg" alt="Calle de París">
         </div>
         <div class="destinosDiv">
             <p>Una experiencia inolvidable</p>
@@ -180,12 +180,12 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgCero">
-                    <img src="../img/destinos/paris/paris_6.jpg" alt="Peatonal en París">
+                    <img src="img/destinos/paris/paris_6.jpg" alt="Peatonal en París">
                 </div>
             </div>
             <div class="subDestinos__seccion__capsula reverse">
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgCero">
-                    <img src="../img/destinos/paris/paris_4.jpg" alt="Pila de cruasanes">
+                    <img src="img/destinos/paris/paris_4.jpg" alt="Pila de cruasanes">
                 </div>
                 <div class="subDestinos__seccion__capsula__data">
                     <p class="letterSpacing">capsula <em>4</em></p>
@@ -204,7 +204,7 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgCero">
-                    <img src="../img/destinos/paris/paris_5.jpg" alt="Pirámide del museo">
+                    <img src="img/destinos/paris/paris_5.jpg" alt="Pirámide del museo">
                 </div>
             </div>
         </div>
@@ -216,11 +216,11 @@
         <div class="popupClose" id="popupClose"><i class='bx bx-x'></i></div>
         <div class="swiper-container swiperPopUp">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="../img/destinos/barcelona/barcelona_5.jpg" alt="Catedral sagrada familia"></div>
-                <div class="swiper-slide"><img src="../img/destinos/barcelona/barcelona_4.jpg" alt="Calle de barcelona"></div>
-                <div class="swiper-slide"><img src="../img/destinos/barcelona/barcelona_2.jpg" alt="Vista aérea del parque"></div>
-                <div class="swiper-slide"><img src="../img/destinos/barcelona/barcelona_6.jpg" alt="vista de la fachada del edificio"></div>
-                <div class="swiper-slide"><img src="../img/destinos/barcelona/barcelona_3.jpg" alt="Alimentos sobre una mesa"></div>
+                <div class="swiper-slide"><img src="img/destinos/barcelona/barcelona_5.jpg" alt="Catedral sagrada familia"></div>
+                <div class="swiper-slide"><img src="img/destinos/barcelona/barcelona_4.jpg" alt="Calle de barcelona"></div>
+                <div class="swiper-slide"><img src="img/destinos/barcelona/barcelona_2.jpg" alt="Vista aérea del parque"></div>
+                <div class="swiper-slide"><img src="img/destinos/barcelona/barcelona_6.jpg" alt="vista de la fachada del edificio"></div>
+                <div class="swiper-slide"><img src="img/destinos/barcelona/barcelona_3.jpg" alt="Alimentos sobre una mesa"></div>
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
@@ -239,12 +239,12 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgUno">
-                    <img src="../img/destinos/barcelona/barcelona_5.jpg" alt="Catedral sagrada familia">
+                    <img src="img/destinos/barcelona/barcelona_5.jpg" alt="Catedral sagrada familia">
                 </div>
             </div>
             <div class="subDestinos__seccion__capsula reverse">
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgUno">
-                    <img src="../img/destinos/barcelona/barcelona_4.jpg" alt="Calle de barcelona">
+                    <img src="img/destinos/barcelona/barcelona_4.jpg" alt="Calle de barcelona">
                 </div>
                 <div class="subDestinos__seccion__capsula__data">
                     <p class="letterSpacing">capsula <em>2</em></p>
@@ -255,7 +255,7 @@
             </div>
         </div>
         <div class="subDestinos__img">
-            <img id="subDestinos__imgUno" src="../img/destinos/barcelona/barcelona_1.jpg" alt="Calle de barcelona">
+            <img id="subDestinos__imgUno" src="img/destinos/barcelona/barcelona_1.jpg" alt="Calle de barcelona">
         </div>
         <div class="destinosDiv">
             <p>Una experiencia inolvidable</p>
@@ -270,12 +270,12 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgUno">
-                    <img src="../img/destinos/barcelona/barcelona_2.jpg" alt="Vista aérea del parque">
+                    <img src="img/destinos/barcelona/barcelona_2.jpg" alt="Vista aérea del parque">
                 </div>
             </div>
             <div class="subDestinos__seccion__capsula reverse">
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgUno">
-                    <img src="../img/destinos/barcelona/barcelona_6.jpg" alt="vista de la fachada del edificio">
+                    <img src="img/destinos/barcelona/barcelona_6.jpg" alt="vista de la fachada del edificio">
                 </div>
                 <div class="subDestinos__seccion__capsula__data">
                     <p class="letterSpacing">capsula <em>4</em></p>
@@ -293,7 +293,7 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgUno">
-                    <img src="../img/destinos/barcelona/barcelona_3.jpg" alt="Alimentos sobre una mesa">
+                    <img src="img/destinos/barcelona/barcelona_3.jpg" alt="Alimentos sobre una mesa">
                 </div>
             </div>
         </div>
@@ -305,11 +305,11 @@
         <div class="popupClose" id="popupClose"><i class='bx bx-x'></i></div>
         <div class="swiper-container swiperPopUp">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="../img/destinos/santorini/santorini_3.jpg" alt="Costas de Santorini"></div>
-                <div class="swiper-slide"><img src="../img/destinos/santorini/santorini_4.jpg" alt="Peatonal de Santorini"></div>
-                <div class="swiper-slide"><img src="../img/destinos/santorini/santorini_2.jpg" alt="La playa roja"></div>
-                <div class="swiper-slide"><img src="../img/destinos/santorini/santorini_6.jpg" alt="Comida de grecia"></div>
-                <div class="swiper-slide"><img src="../img/destinos/santorini/santorini_5.jpg" alt="Partenón típico griego"></div>
+                <div class="swiper-slide"><img src="img/destinos/santorini/santorini_3.jpg" alt="Costas de Santorini"></div>
+                <div class="swiper-slide"><img src="img/destinos/santorini/santorini_4.jpg" alt="Peatonal de Santorini"></div>
+                <div class="swiper-slide"><img src="img/destinos/santorini/santorini_2.jpg" alt="La playa roja"></div>
+                <div class="swiper-slide"><img src="img/destinos/santorini/santorini_6.jpg" alt="Comida de grecia"></div>
+                <div class="swiper-slide"><img src="img/destinos/santorini/santorini_5.jpg" alt="Partenón típico griego"></div>
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
@@ -329,12 +329,12 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgDos">
-                    <img src="../img/destinos/santorini/santorini_3.jpg" alt="Costas de Santorini">
+                    <img src="img/destinos/santorini/santorini_3.jpg" alt="Costas de Santorini">
                 </div>
             </div>
             <div class="subDestinos__seccion__capsula reverse">
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgDos">
-                    <img src="../img/destinos/santorini/santorini_4.jpg" alt="Peatonal de Santorini">
+                    <img src="img/destinos/santorini/santorini_4.jpg" alt="Peatonal de Santorini">
                 </div>
                 <div class="subDestinos__seccion__capsula__data">
                     <p class="letterSpacing">capsula <em>2</em></p>
@@ -346,7 +346,7 @@
             </div>
         </div>
         <div class="subDestinos__img">
-            <img id="subDestinos__imgDos" src="../img/destinos/santorini/santorini_1.jpg" alt="Costa de santorini">
+            <img id="subDestinos__imgDos" src="img/destinos/santorini/santorini_1.jpg" alt="Costa de santorini">
         </div>
         <div class="destinosDiv">
             <p>Una experiencia inolvidable</p>
@@ -361,12 +361,12 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgDos">
-                    <img src="../img/destinos/santorini/santorini_2.jpg" alt="La playa roja">
+                    <img src="img/destinos/santorini/santorini_2.jpg" alt="La playa roja">
                 </div>
             </div>
             <div class="subDestinos__seccion__capsula reverse">
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgDos">
-                    <img src="../img/destinos/santorini/santorini_6.jpg" alt="Comida de grecia">
+                    <img src="img/destinos/santorini/santorini_6.jpg" alt="Comida de grecia">
                 </div>
                 <div class="subDestinos__seccion__capsula__data">
                     <p class="letterSpacing">capsula <em>4</em></p>
@@ -384,7 +384,7 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgDos">
-                    <img src="../img/destinos/santorini/santorini_5.jpg" alt="Partenón típico griego">
+                    <img src="img/destinos/santorini/santorini_5.jpg" alt="Partenón típico griego">
                 </div>
             </div>
         </div>
@@ -418,10 +418,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
 
     <!--========== swiper js ==========-->
-    <script src="../js/swiper-bundle.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
 
     <!--========== main js ==========-->
-    <script src="../js/main.js"></script>
+    <script src="js/main.js"></script>
     <!--========== bootstrap ==========-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
