changes on footer

--- a/ofertas.html
+++ b/ofertas.html
@@ -75,7 +75,7 @@
     <div class="introSlider"></div>
 
     <!--============== ofertas ==================-->
-    <main class="ofertas" id="top">
+    <main class="ofertas container-fluid" id="top">
         <img src="img/genericas/generic_4.jpg" class="ofertasBg" alt="Hombre en cima de montaña">
         <div class="ofertasBlur"></div>
         <div class="cardContainer">
@@ -391,8 +391,8 @@
     </section>
 
     <!--============== footer ==================-->
-    <footer class="foot">
-        <div class="footNav">
+    <footer class="foot container-fluid">
+        <div class="footNav container-fluid">
             <em class="travelnowFooter"><a href="index.html" class="anchorId">travelnow</a></em>
             <div class="infoFooter">
                 <p class="addressFooter">Av. Córdoba 241 <br>8324 Cipolletti <br>Argentina</p>
@@ -405,7 +405,7 @@
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
             <ul class="socialMedias">
-                <li><a href="#"><i class='bx bxl-facebook'></i></a></li>
+                <li><a href="#"><i class='bx:bxl-facebook-circle'></i></a></li>
                 <li><a href="#"><i class='bx bxl-twitter'></i></a></li>
                 <li><a href="#"><i class='bx bxl-instagram'></i></a></li>
                 <li><a href="#"><i class='bx bxl-github'></i></a></li>
