changes on footer size

--- a/index.html
+++ b/index.html
@@ -374,8 +374,9 @@
         </div>
     </section>
     <!--============== footer ==================-->
-    <footer class="foot" style="background-image: url(img/Logo-GuanActiva-03-scaled.jpg); background-repeat: no-repeat;\">
+    <footer class="foot ">
         <div class="footNav">
+            <a class="" href="index.html"><img src="img/logof.jpg" alt=""></a>
             <!-- <em class="travelnowFooter"><a href="index.html" class="anchorId">Guanacaste Activa</a></em> -->
             <div class="infoFooter">
                 <p class="addressFooter">Barrio Buenos Aires<br>Santa Cruz,Guanacaste <br>Costa Rica</p>
