--- a/destinos.html
+++ b/destinos.html
@@ -15,13 +15,13 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <!--========== swiperCss ==========-->
-    <link rel="stylesheet" href="../css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
 
     <!--============== normalizeCss ==================-->
-    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
 
     <!--============== css ==================-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!--============== fonts ==================-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -31,7 +31,7 @@
     <meta name="keywords" content="aerolínea argentina, agencia de viaje, viaje, vuelos, viajar, hoteleria, turismo, pasajes, bali, japon, vietnam">
     <meta name="description" content="TravelNow ofrece multiples destinos para que vos elijas a donde te llevamos.">
     <title>TravelNow - Destinos</title>
-    <link rel="icon" href="../img/genericas/plane_solid.png">
+    <link rel="icon" href="img/genericas/plane_solid.png">
 </head>
 
 <body>
@@ -119,8 +119,8 @@
     <!--============== galleryControls ==================-->
     <div class="controls gallery-thumbs">
         <div class="controlsContainer swiper-wrapper">
-            <img src="../img/destinos/japon/japon_1.jpg" alt="Flores Típicas" class="controlsImg swiper-slide">
-            <img src="../img/destinos/bali/bali_1.jpg" alt="Costa de Bali" class="controlsImg swiper-slide">
+            <img src="img/destinos/japon/japon_1.jpg" alt="Flores Típicas" class="controlsImg swiper-slide">
+            <img src="img/destinos/bali/bali_1.jpg" alt="Costa de Bali" class="controlsImg swiper-slide">
             <img src="../img/destinos/vietnam/vietnam_1.jpg" alt="Canoa en rio Mekong" class="controlsImg swiper-slide">
         </div>
     </div>
@@ -157,13 +157,13 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgCero">
-                    <img src="../img/destinos/japon/japon_4.jpg" alt="Cerezo en flor">
+                    <img src="img/destinos/japon/japon_4.jpg" alt="Cerezo en flor">
                 </div>
             </div>
             <div class="subDestinos__seccion__capsula reverse">
 
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgCero">
-                    <img src="../img/destinos/japon/japon_3.jpg" alt="Gente con vestimentas típicas">
+                    <img src="img/destinos/japon/japon_3.jpg" alt="Gente con vestimentas típicas">
                 </div>
                 <div class="subDestinos__seccion__capsula__data">
                     <p class="letterSpacing">capsula <em>2</em></p>
@@ -175,7 +175,7 @@
             </div>
         </div>
         <div class="subDestinos__img">
-            <img id="subDestinos__imgCero" src="../img/destinos/japon/japon_1.jpg" alt="Flor típica">
+            <img id="subDestinos__imgCero" src="img/destinos/japon/japon_1.jpg" alt="Flor típica">
         </div>
         <div class="destinosDiv">
             <p>Una experiencia inolvidable</p>
@@ -190,12 +190,12 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgCero">
-                    <img src="../img/destinos/japon/japon_2.jpg" alt="pasadizo de toriis">
+                    <img src="img/destinos/japon/japon_2.jpg" alt="pasadizo de toriis">
                 </div>
             </div>
             <div class="subDestinos__seccion__capsula reverse">
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgCero">
-                    <img src="../img/destinos/japon/japon_5.jpg" alt="Bandeja de sushi">
+                    <img src="img/destinos/japon/japon_5.jpg" alt="Bandeja de sushi">
                 </div>
                 <div class="subDestinos__seccion__capsula__data">
                     <p class="letterSpacing">capsula <em>4</em></p>
@@ -213,7 +213,7 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgCero">
-                    <img src="../img/destinos/japon/japon_6.jpg" alt="Vista aérea de montaña">
+                    <img src="img/destinos/japon/japon_6.jpg" alt="Vista aérea de montaña">
                 </div>
             </div>
         </div>
@@ -225,11 +225,11 @@
         <div class="popupClose" id="popupClose"><i class='bx bx-x'></i></div>
         <div class="swiper-container swiperPopUp">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="../img/destinos/bali/bali_3.jpg" alt="Templo al lado de rio"></div>
-                <div class="swiper-slide"><img src="../img/destinos/bali/bali_5.jpg" alt="Volcán Humeando"></div>
-                <div class="swiper-slide"><img src="../img/destinos/bali/bali_2.jpg" alt="Mujeres bailando"></div>
-                <div class="swiper-slide"><img src="../img/destinos/bali/bali_4.jpg" alt="Pilas de frutas"></div>
-                <div class="swiper-slide"><img src="../img/destinos/bali/bali_6.jpg" alt="Mono en rama"></div>
+                <div class="swiper-slide"><img src="img/destinos/bali/bali_3.jpg" alt="Templo al lado de rio"></div>
+                <div class="swiper-slide"><img src="img/destinos/bali/bali_5.jpg" alt="Volcán Humeando"></div>
+                <div class="swiper-slide"><img src="img/destinos/bali/bali_2.jpg" alt="Mujeres bailando"></div>
+                <div class="swiper-slide"><img src="img/destinos/bali/bali_4.jpg" alt="Pilas de frutas"></div>
+                <div class="swiper-slide"><img src="img/destinos/bali/bali_6.jpg" alt="Mono en rama"></div>
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
@@ -250,12 +250,12 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgUno">
-                    <img src="../img/destinos/bali/bali_3.jpg" alt="Templo al lado de rio">
+                    <img src="img/destinos/bali/bali_3.jpg" alt="Templo al lado de rio">
                 </div>
             </div>
             <div class="subDestinos__seccion__capsula reverse">
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgUno">
-                    <img src="../img/destinos/bali/bali_5.jpg" alt="Volcán Humeando">
+                    <img src="img/destinos/bali/bali_5.jpg" alt="Volcán Humeando">
                 </div>
                 <div class="subDestinos__seccion__capsula__data">
                     <p class="letterSpacing">capsula <em>2</em></p>
@@ -268,7 +268,7 @@
             </div>
         </div>
         <div class="subDestinos__img">
-            <img id="subDestinos__imgUno" src="../img/destinos/bali/bali_1.jpg" alt="Costa de Bali">
+            <img id="subDestinos__imgUno" src="img/destinos/bali/bali_1.jpg" alt="Costa de Bali">
         </div>
         <div class="destinosDiv">
             <p>Una experiencia inolvidable</p>
@@ -282,12 +282,12 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgUno">
-                    <img src="../img/destinos/bali/bali_2.jpg" alt="Mujeres bailando">
+                    <img src="img/destinos/bali/bali_2.jpg" alt="Mujeres bailando">
                 </div>
             </div>
             <div class="subDestinos__seccion__capsula reverse">
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgUno">
-                    <img src="../img/destinos/bali/bali_4.jpg" alt="Pilas de frutas">
+                    <img src="img/destinos/bali/bali_4.jpg" alt="Pilas de frutas">
                 </div>
                 <div class="subDestinos__seccion__capsula__data">
                     <p class="letterSpacing">capsula <em>4</em></p>
@@ -306,7 +306,7 @@
                     </p>
                 </div>
                 <div class="subDestinos__seccion__capsula__imgContainer capsula__imgUno">
-                    <img src="../img/destinos/bali/bali_6.jpg" alt="Mono en rama">
+                    <img src="img/destinos/bali/bali_6.jpg" alt="Mono en rama">
                 </div>
             </div>
         </div>
@@ -318,11 +318,11 @@
         <div class="popupClose" id="popupClose"><i class='bx bx-x'></i></div>
         <div class="swiper-container swiperPopUp">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="../img/destinos/vietnam/vietnam_4.jpg" alt="Paisaje de montaña"></div>
-                <div class="swiper-slide"><img src="../img/destinos/vietnam/vietnam_6.jpg" alt="Manos sosteniendo puente"></div>
-                <div class="swiper-slide"><img src="../img/destinos/vietnam/vietnam_2.jpg" alt="catedral con aves"></div>
-                <div class="swiper-slide"><img src="../img/destinos/vietnam/vietnam_5.jpg" alt="Mujeres navegando canoa"></div>
-                <div class="swiper-slide"><img src="../img/destinos/vietnam/vietnam_3.jpg" alt="Vista de pagoda"></div>
+                <div class="swiper-slide"><img src="img/destinos/vietnam/vietnam_4.jpg" alt="Paisaje de montaña"></div>
+                <div class="swiper-slide"><img src="img/destinos/vietnam/vietnam_6.jpg" alt="Manos sosteniendo puente"></div>
+                <div class="swiper-slide"><img src="img/destinos/vietnam/vietnam_2.jpg" alt="catedral con aves"></div>
+                <div class="swiper-slide"><img src="img/destinos/vietnam/vietnam_5.jpg" alt="Mujeres navegando canoa"></div>
+                <div class="swiper-slide"><img src="img/destinos/vietnam/vietnam_3.jpg" alt="Vista de pagoda"></div>
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
@@ -431,10 +431,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
 
     <!--========== swiper js ==========-->
-    <script src="../js/swiper-bundle.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
 
     <!--========== main js ==========-->
-    <script src="../js/main.js"></script>
+    <script src="js/main.js"></script>
     <!--========== bootstrap ==========-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 
